# OOP_django_gamestore_model

./: .gitignore  README.md  pyproject.toml  requirements.txt
account/: forms.py  token.py  urls.py  views.py
account/templates/account/: dashboard.html  delete_account.html  manage_shipping.html  profile_management.html  track_orders.html
account/templates/account/password/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_sent.html
account/templates/account/registration/: email_fail.html  email_sent.html  email_success.html  email_verify.html  register.html
cart/: cart.py  urls.py  views.py
cart/templates/: cart_summary.html
cart/templates/cart/: cart_summary.html
game_store/: settings.py  urls.py
inventory/: admin.py  context_processors.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
inventory/migrations/: 0001_initial.py
payment/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
payment/migrations/: 0001_initial.py
payment/templates/payment/: checkout.html  payment_fail.html  payment_success.html
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_remove_product_image_productimage.py  0003_alter_productimage_image.py
store/templates/: list_category.html
store/templates/store/: base.html  list_category.html  product_info.html  store.html
